feat: swagger regprovider & ecr
