# cmd/backend/internal/ecr/handler.go
@@ -7,6 +7,8 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/kappusuton-yon-tebaru/backend/internal/enum"
+	"github.com/kappusuton-yon-tebaru/backend/internal/httputils"
+	_ "github.com/kappusuton-yon-tebaru/backend/internal/models"
 	"github.com/kappusuton-yon-tebaru/backend/internal/projectrepository"
 	"github.com/kappusuton-yon-tebaru/backend/internal/query"
 	"github.com/kappusuton-yon-tebaru/backend/internal/utils"
@@ -27,37 +29,52 @@ func NewHandler(service *Service, projectRepoService *projectrepository.Service,
 	}
 }
 
+// List all ecr images by project id and service name
+//
+//	@Router			/ecr/images [get]
+//	@Summary		List all ecr images by project id and service name
+//	@Description	List all ecr images by project id and service name
+//	@Tags			ECR
+//	@Produce		json
+//	@Param			project_id		query		string	true	"Project ID"
+//	@Param			service_name	query		string	true	"Service Name"
+//	@Param			page			query		int		false	"Page"			Default(1)
+//	@Param			limit			query		int		false	"Limit"			Default(10)
+//	@Param			sort_by			query		string	false	"Sort by"		Enums(created_at, name)
+//	@Param			sort_order		query		string	false	"Sort order"	Enums(asc, desc)
+//	@Param			query			query		string	false	"Query on image_tag"
+//	@Success		200				{object}	models.Paginated[ECRImageResponse]
+//	@Failure		400				{object}	httputils.ErrResponse
+//	@Failure		404				{object}	httputils.ErrResponse
+//	@Failure		500				{object}	httputils.ErrResponse
 func (h *Handler) GetECRImages(ctx *gin.Context) {
 	projectId := ctx.Query("project_id")
 	serviceName := ctx.Query("service_name")
 
 	if projectId == "" || serviceName == "" {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "missing required query parameters",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "missing required query parameters",
 		})
 		return
 	}
 
 	projectRepo, projectRepoErr := h.projectRepoService.GetProjectRepositoryByProjectId(ctx, projectId)
 	if projectRepoErr != nil {
-		ctx.JSON(http.StatusNotFound, map[string]any{
-			"message": "project repository not found",
-			"error":   projectRepoErr.Error(),
-		})
+		ctx.JSON(httputils.ErrorResponseFromWErr(projectRepoErr))
 		return
 	}
 
 	if projectRepo.RegistryProvider.ECRCredential == nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "invalid ecr credential",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "invalid ecr credential",
 		})
 	}
 
 	pagination := query.NewPaginationWithDefault(1, 10)
 	err := ctx.ShouldBindQuery(&pagination)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "pagination should be integer",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "pagination should be integer",
 		})
 		return
 	}
@@ -65,23 +82,23 @@ func (h *Handler) GetECRImages(ctx *gin.Context) {
 	sortFilter := query.NewSortQueryWithDefault("created_at", enum.Desc)
 	err = ctx.ShouldBindQuery(&sortFilter)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "invalid sort query",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "invalid sort query",
 		})
 		return
 	}
 
 	availableSortKey := []string{"created_at", "name"}
 	if err := h.validator.Var(sortFilter.SortBy, fmt.Sprintf("omitempty,oneof=%s", strings.Join(availableSortKey, " "))); err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": fmt.Sprintf("sort key can only be one of the field: %s", utils.ArrayWithComma(availableSortKey, "or")),
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: fmt.Sprintf("sort key can only be one of the field: %s", utils.ArrayWithComma(availableSortKey, "or")),
 		})
 		return
 	}
 
 	if err := h.validator.Struct(sortFilter); err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "sort order can only be 'asc' or 'desc'",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "sort order can only be 'asc' or 'desc'",
 		})
 		return
 	}
@@ -89,8 +106,8 @@ func (h *Handler) GetECRImages(ctx *gin.Context) {
 	queryFilter := query.NewQueryFilter("image_tag")
 	err = ctx.ShouldBindQuery(&queryFilter)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]any{
-			"message": "invalid query",
+		ctx.JSON(http.StatusBadRequest, httputils.ErrResponse{
+			Message: "invalid query",
 		})
 		return
 	}
@@ -102,9 +119,8 @@ func (h *Handler) GetECRImages(ctx *gin.Context) {
 
 	images, err := h.service.GetECRImages(ctx, *projectRepo.RegistryProvider, serviceName, queryParam)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, map[string]any{
-			"message": "internal server error",
-			"error":   err.Error(),
+		ctx.JSON(http.StatusInternalServerError, httputils.ErrResponse{
+			Message: err.Error(),
 		})
 		return
 	}
